--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yunjuniverse
 description: It's my universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://ibb.co/qYv1LZP
 
 #
 # Flags below are optional
