--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yunjuniverse
 description: It's my universe
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://ibb.co/qYv1LZP
+avatar: https://i.ibb.co/KxJyc13/Juniverse.png
 
 #
 # Flags below are optional
